QLineEdit: don't change layout direction on keyboard input

QLineEdit was the only widget in Qt that flips the widget's layout
direction if a key press changes the document's layout direction.

This resulted in inconsistent behavior: setting text to RTL content
programmatically didn't set the widget's layout direction to RTL, but
the first key press (even if just a cursor key or a latin1 character)
did. Clearing the text with keyboard shortcuts changed the layout
direction, doing the same using the clear button or context menu actions
didn't.

In addition, the automatic changing overrode whatever the UI developer
set, or what Qt detected as the global layout direction based on the
active translation.

Remove the automatic flipping.

[ChangeLog][QtWidgets][QLineEdit] QLineEdit used to change the layout
direction on each key press, based on the text content. This feature
resulted in an inconsistent and erratic user experience, and has been
removed.

Fixes: QTBUG-95011
Change-Id: Ib653350d35e25ce431cca1abe9b45bdf33d035fe
Reviewed-by: Fan RuiJie <fanruijie@uniontech.com>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit e08f6d601de4faea869dcfd05a7e133366328981)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>